# WireSentinel-AI

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ai-core/: Cargo.toml
ai-core/src/: emitter.rs  engine.rs  error.rs  lib.rs  llm.rs
analytics/: Cargo.toml
analytics/src/: engine.rs  lib.rs
controller/: Cargo.toml
controller/src/: dto.rs  lib.rs
copilot/: Cargo.toml
copilot/src/: engine.rs  lib.rs
correlation/: Cargo.toml
correlation/src/: engine.rs  lib.rs
detections/: Cargo.toml
detections/src/: engine.rs  lib.rs
embeddings/: Cargo.toml
embeddings/src/: engine.rs  lib.rs
intelligence/: Cargo.toml
intelligence/src/: engine.rs  lib.rs
investigation/: Cargo.toml
investigation/src/: engine.rs  lib.rs
knowledge-graph/: Cargo.toml
knowledge-graph/src/: engine.rs  lib.rs
playbooks/: Cargo.toml
playbooks/src/: engine.rs  lib.rs
policies/: Cargo.toml
policies/src/: engine.rs  lib.rs
rag/: Cargo.toml
rag/src/: engine.rs  lib.rs
reporting/: Cargo.toml
reporting/src/: engine.rs  lib.rs
risk/: Cargo.toml
risk/src/: engine.rs  lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  platform.rs
tests/: Cargo.toml
tests/tests/: ingest_to_copilot.rs  platform_integration.rs
