[workspace]
resolver = "2"
members = [
    "ai-core",
    "embeddings",
    "copilot",
    "investigation",
    "correlation",
    "knowledge-graph",
    "rag",
    "detections",
    "playbooks",
    "policies",
    "intelligence",
    "analytics",
    "reporting",
    "risk",
    "sdk",
    "controller",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WireSentinel Contributors"]
repository = "https://github.com/WireSentinel/WireSentinel-AI"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex = "1"

shared-types = { path = "../WireSentinel/shared-types" }
ai-core = { path = "ai-core" }
embeddings = { path = "embeddings" }
copilot = { path = "copilot" }
investigation = { path = "investigation" }
correlation = { path = "correlation" }
knowledge-graph = { path = "knowledge-graph" }
rag = { path = "rag" }
detections = { path = "detections" }
playbooks = { path = "playbooks" }
policies = { path = "policies" }
intelligence = { path = "intelligence" }
analytics = { path = "analytics" }
reporting = { path = "reporting" }
risk = { path = "risk" }
ai-sdk = { path = "sdk" }
ai-controller = { path = "controller" }
