[package]
name = "ai-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ai-sdk = { package = "ai-sdk", path = "../sdk" }
ai-controller = { package = "ai-controller", path = "../controller" }
shared-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "platform_integration"
path = "tests/platform_integration.rs"

[[test]]
name = "ingest_to_copilot"
path = "tests/ingest_to_copilot.rs"
